--- a/docs/사용자가이드.md
+++ b/docs/사용자가이드.md
@@ -1,28 +1,43 @@
-# 사용자 가이드
+# 6502 BASIC 에뮬레이터 사용자 가이드
 
 > 6502 BASIC JavaScript 에뮬레이터 사용법 완전 가이드
+
+[![Version](https://img.shields.io/badge/version-1.0.0-blue.svg)](https://github.com/your-repo/jsbasic)
+[![License](https://img.shields.io/badge/license-MIT-green.svg)](LICENSE)
+[![Browser Support](https://img.shields.io/badge/browsers-Chrome%20%7C%20Firefox%20%7C%20Safari%20%7C%20Edge-brightgreen.svg)](docs/브라우저호환성.md)
 
 ## 📋 목차
 
 1. [빠른 시작](#빠른-시작)
-2. [BASIC 언어 기초](#basic-언어-기초)
-3. [프로그램 작성하기](#프로그램-작성하기)
-4. [내장 명령어](#내장-명령어)
-5. [수학 함수](#수학-함수)
-6. [문자열 처리](#문자열-처리)
-7. [파일 관리](#파일-관리)
-8. [디버깅 도구](#디버깅-도구)
-9. [고급 기능](#고급-기능)
-10. [예제 프로그램](#예제-프로그램)
+2. [설치 및 실행](#설치-및-실행)
+3. [BASIC 언어 기초](#basic-언어-기초)
+4. [프로그램 작성하기](#프로그램-작성하기)
+5. [내장 명령어](#내장-명령어)
+6. [수학 함수](#수학-함수)
+7. [문자열 처리](#문자열-처리)
+8. [파일 관리](#파일-관리)
+9. [디버깅 도구](#디버깅-도구)
+10. [고급 기능](#고급-기능)
+11. [예제 프로그램](#예제-프로그램)
+12. [성능 최적화](#성능-최적화)
+13. [모바일 사용법](#모바일-사용법)
+14. [문제 해결](#문제-해결)
+15. [자주 묻는 질문](#자주-묻는-질문)
 
 ## 🚀 빠른 시작
+
+### 🎯 에뮬레이터 시작하기
+
+1. **웹 브라우저에서 바로 시작**: [온라인 데모](https://your-demo-url.com)
+2. **로컬 설치**: 아래 [설치 및 실행](#설치-및-실행) 섹션 참조
 
 ### 첫 번째 프로그램
 
 에뮬레이터에 접속하면 다음과 같은 화면을 볼 수 있습니다:
 
 ```
-6502 BASIC COMPUTER
+6502 BASIC COMPUTER v1.0.0
+Microsoft 6502 BASIC Compatible
 32767 BYTES FREE
 
 READY.
@@ -32,23 +47,85 @@ READY.
 
 ```basic
 10 PRINT "안녕하세요, BASIC!"
+20 PRINT "6502 에뮬레이터에 오신 것을 환영합니다!"
 RUN
 ```
 
 결과:
 ```
 안녕하세요, BASIC!
+6502 에뮬레이터에 오신 것을 환영합니다!
 READY.
 ```
 
-### 기본 명령어 익히기
+### 5분 만에 익히는 기본 명령어
 
 ```basic
-NEW              # 새 프로그램 시작
+NEW              # 새 프로그램 시작 (메모리 지우기)
 LIST             # 현재 프로그램 보기
 RUN              # 프로그램 실행
 SAVE "HELLO"     # 프로그램 저장
 LOAD "HELLO"     # 프로그램 불러오기
+CONT             # 중단된 프로그램 계속 실행
+```
+
+## 📦 설치 및 실행
+
+### 온라인 사용 (권장)
+
+별도 설치 없이 바로 사용할 수 있습니다:
+- 🌐 [온라인 에뮬레이터](https://your-demo-url.com)
+- 📱 모바일 브라우저 완전 지원
+- ☁️ 클라우드 저장 기능
+
+### 로컬 설치
+
+#### 사전 요구사항
+- Node.js 18+ 또는 Bun 1.0+ (권장)
+- 모던 웹브라우저 (Chrome 90+, Firefox 88+, Safari 14+, Edge 90+)
+
+#### 설치 과정
+
+**1. 저장소 복제**
+```bash
+git clone https://github.com/your-repo/jsbasic.git
+cd jsbasic
+```
+
+**2. 의존성 설치**
+```bash
+# Bun 사용 (권장)
+bun install
+
+# 또는 npm 사용
+npm install
+```
+
+**3. 개발 서버 시작**
+```bash
+# 개발 모드 (핫 리로드 포함)
+bun run dev
+
+# 또는 npm으로
+npm run dev
+```
+
+**4. 브라우저에서 접속**
+```
+http://localhost:3000
+```
+
+#### 프로덕션 빌드
+
+```bash
+# 프로덕션 빌드 생성
+bun run build
+
+# 빌드 결과 미리보기
+bun run preview
+
+# 빌드 파일 배포
+# dist/ 폴더 내용을 웹서버에 업로드
 ```
 
 ## 📖 BASIC 언어 기초
@@ -1027,5 +1104,248 @@ TROFF   # 또는 TRACE OFF
 930 PRINT "최종 골드:"; GOLD
 940 END
 ```
+
+## ⚡ 성능 최적화
+
+### 에뮬레이터 성능 설정
+
+```javascript
+// 성능 모니터링 활성화
+performance.monitor.enable();
+
+// CPU 속도 조절
+emulator.setCPUSpeed('1MHz');    // 원본 속도
+emulator.setCPUSpeed('max');     // 최고 속도
+emulator.setCPUSpeed('50%');     // 절반 속도
+
+// 메모리 최적화
+emulator.memory.optimize();
+```
+
+### 프로그램 최적화 팁
+
+```basic
+# 1. 계산 결과를 변수에 저장
+10 PI = 3.14159
+20 TWO_PI = 2 * PI
+30 FOR I = 1 TO 360
+40   RESULT = SIN(I * PI / 180)    # 매번 계산 (느림)
+50 NEXT I
+
+# 개선된 버전
+60 DEGREE_TO_RAD = PI / 180
+70 FOR I = 1 TO 360  
+80   RESULT = SIN(I * DEGREE_TO_RAD)  # 한 번만 계산 (빠름)
+90 NEXT I
+
+# 2. 배열 초기화 최적화
+100 DIM A(1000)
+110 FOR I = 0 TO 1000: A(I) = 0: NEXT I  # 한 줄로 처리 (빠름)
+
+# 3. 문자열 연산 최적화
+120 TEXT$ = ""
+130 FOR I = 1 TO 1000
+140   TEXT$ = TEXT$ + STR$(I) + " "  # 매번 새로운 문자열 생성 (느림)
+150 NEXT I
+```
+
+### 성능 모니터링
+
+실시간 성능 정보 확인:
+- **CPU 사용률**: 현재 CPU 사이클 사용량
+- **메모리 사용량**: 힙 메모리 및 스택 상태  
+- **프레임 레이트**: 화면 업데이트 속도 (FPS)
+- **실행 속도**: 명령어 실행 속도 (MIPS)
+
+## 📱 모바일 사용법
+
+### 터치 인터페이스
+
+**가상 키보드 최적화**:
+- 자동 완성 지원으로 타이핑 시간 단축
+- 자주 사용하는 BASIC 명령어 빠른 입력 버튼
+- 방향키 및 특수키 터치 패드
+
+**화면 최적화**:
+- 핀치 줌으로 텍스트 크기 조절
+- 세로/가로 모드 자동 회전
+- 상태바 숨김으로 화면 공간 최대화
+
+### 배터리 절약
+
+```javascript
+// 배터리 절약 모드 활성화
+mobileOptimizer.setBatterySaver(true);
+
+// 백그라운드에서 실행 속도 자동 조절
+mobileOptimizer.enableBackgroundThrottling();
+
+// 화면 꺼짐 상태에서 일시 정지
+mobileOptimizer.enableScreenOffPause();
+```
+
+### 모바일 전용 기능
+
+- **오프라인 지원**: 인터넷 연결 없이도 사용 가능
+- **터치 제스처**: 스와이프로 히스토리 탐색
+- **진동 피드백**: 오류 발생 시 햅틱 피드백
+- **음성 입력**: 음성으로 BASIC 코드 입력 (실험적)
+
+## 🛠️ 문제 해결
+
+### 자주 발생하는 오류
+
+#### 1. Syntax Error
+```
+Syntax Error in 10
+        ^
+```
+**원인**: 명령어 철자 오류 또는 잘못된 문법
+**해결**: 
+- 명령어 철자 확인
+- BASIC 문법 규칙 준수
+- 예: `PRNIT` → `PRINT`
+
+#### 2. Out of Memory
+```
+Out of Memory Error
+```
+**원인**: 배열이나 문자열이 메모리 한계 초과
+**해결**:
+```basic
+CLEAR           # 변수 메모리 정리
+DIM A(100)      # 더 작은 배열 사용
+```
+
+#### 3. Division by Zero
+```
+Division by Zero Error in 20
+```
+**원인**: 0으로 나누기 시도
+**해결**:
+```basic
+10 INPUT A, B
+20 IF B = 0 THEN PRINT "0으로 나눌 수 없습니다": GOTO 10
+30 PRINT A / B
+```
+
+#### 4. Type Mismatch
+```
+Type Mismatch Error in 15
+```
+**원인**: 숫자 변수에 문자열 대입 등
+**해결**:
+```basic
+# 잘못된 예
+10 A = "Hello"      # A는 숫자 변수
+
+# 올바른 예  
+10 A$ = "Hello"     # A$는 문자열 변수
+```
+
+### 성능 문제 해결
+
+#### 프로그램이 느려질 때
+1. **반복문 내부 계산 줄이기**
+2. **불필요한 문자열 연산 제거**
+3. **배열 크기 적절히 조정**
+4. **CPU 속도 설정 확인**
+
+#### 메모리 부족 문제
+```basic
+# 메모리 상태 확인
+PRINT "남은 메모리:"; FRE(0)
+
+# 메모리 정리
+CLEAR
+
+# 큰 배열 사용 시 주의
+DIM BIG_ARRAY(10000)  # 메모리 많이 사용
+```
+
+### 브라우저별 이슈
+
+**Chrome**: 일반적으로 최고 성능
+**Firefox**: 메모리 사용량 최적화됨
+**Safari**: iOS에서 터치 입력 최적화
+**Edge**: Windows 환경에서 안정적
+
+## ❓ 자주 묻는 질문
+
+### Q1. 원본 6502 BASIC과 얼마나 호환성이 있나요?
+**A**: Microsoft 6502 BASIC 1.1과 95% 이상 호환됩니다. 주요 명령어, 함수, 문법이 모두 지원됩니다.
+
+### Q2. 모바일에서도 사용할 수 있나요?
+**A**: 네, 완전히 지원됩니다. 터치 인터페이스, 가상 키보드, 배터리 최적화가 포함되어 있습니다.
+
+### Q3. 오프라인에서 사용 가능한가요?
+**A**: 웹 버전은 캐시 후 오프라인 사용 가능하며, 로컬 설치 시 완전 오프라인 지원됩니다.
+
+### Q4. 저장된 프로그램을 다른 기기에서 불러올 수 있나요?
+**A**: 
+- **온라인 버전**: 클라우드 동기화 지원
+- **로컬 버전**: 파일 내보내기/가져오기 지원
+
+### Q5. 실제 하드웨어에서 실행되나요?
+**A**: JavaScript로 구현된 소프트웨어 에뮬레이션입니다. 실제 6502 CPU는 필요하지 않습니다.
+
+### Q6. 다른 BASIC 언어 (QBasic, GW-BASIC)와 차이점은?
+**A**: 6502 BASIC은 초기 마이크로컴퓨터용으로 설계되어 더 단순하고 제한적입니다. 모던 BASIC의 고급 기능은 지원되지 않습니다.
+
+### Q7. 성능이 원본보다 빠른가요?
+**A**: 모던 하드웨어에서는 원본보다 훨씬 빠르게 실행됩니다. 속도 조절 기능으로 원본 속도 재현 가능합니다.
+
+### Q8. 교육용으로 사용해도 되나요?
+**A**: 네, MIT 라이선스로 교육 목적 자유 사용 가능합니다. 풍부한 예제와 문서가 제공됩니다.
+
+---
+
+## 📚 추가 자료
+
+### 관련 문서
+- 📖 [BASIC 언어 레퍼런스](./BASIC-Reference.md)
+- 🏗️ [개발자 가이드](./개발자가이드.md)
+- 🔧 [API 문서](./API문서.md)
+- 🎮 [예제 프로그램 모음](../examples/README.md)
+
+### 온라인 리소스
+- 🌐 [GitHub 저장소](https://github.com/your-repo/jsbasic)
+- 💬 [커뮤니티 포럼](https://github.com/your-repo/jsbasic/discussions)
+- 🐛 [버그 신고](https://github.com/your-repo/jsbasic/issues)
+- 📺 [YouTube 튜토리얼](https://youtube.com/your-channel)
+
+### 커뮤니티
+- **Discord**: [실시간 채팅](https://discord.gg/your-server)
+- **Reddit**: [r/6502BASIC](https://reddit.com/r/6502BASIC)
+- **Stack Overflow**: `6502-basic` 태그 사용
+
+---
+
+## 📄 라이선스 및 저작권
+
+이 프로젝트는 [MIT 라이선스](../LICENSE) 하에 배포됩니다.
+
+**원본 Microsoft 6502 BASIC**:
+- Microsoft Corporation의 상표입니다
+- 이 프로젝트는 독립적인 구현체입니다
+- 호환성을 위해 동일한 명령어와 문법을 사용합니다
+
+---
+
+## 💖 기여하기
+
+이 프로젝트에 기여하고 싶으시다면:
+
+1. 🍴 [Fork the repository](https://github.com/your-repo/jsbasic/fork)
+2. 🌿 브랜치 생성: `git checkout -b feature/amazing-feature`
+3. 💾 변경사항 커밋: `git commit -m 'Add amazing feature'`
+4. 📤 브랜치 푸시: `git push origin feature/amazing-feature`
+5. 🎯 Pull Request 생성
+
+자세한 내용은 [기여 가이드](./기여가이드.md)를 참조하세요.
+
+---
+
+**🎮 즐거운 BASIC 프로그래밍 되세요!**
 
 이 사용자 가이드를 통해 6502 BASIC JavaScript 에뮬레이터의 모든 기능을 효과적으로 활용할 수 있습니다. 더 많은 예제와 고급 기능은 프로젝트의 `examples/` 폴더를 참조하세요!
